--- a/index.html
+++ b/index.html
@@ -40,49 +40,30 @@
 		<div id="wrap">
 			<div id="text">
 				<div id="code">
-				<!--<span class="say">亲爱的，我爱你，虽然你看不见我对你的告白</span><br>
+				<span class="say">此处是一大段文字，省略一万字  省略一万字  省略一万字</span><br>
 					<span class="say"> </span><br>
-					<span class="say">我知道我不会甜言蜜语，但是我会用行动证明一切</span><br>
+					<span class="say">省略一万字  省略一万字  省略一万字</span><br>
 					<span class="say"> </span><br>
-					<span class="say">你说我啰嗦，有些东西因为越在乎所以越失去</span><br>
+					<span class="say">省略一万字  省略一万字  省略一万字</span><br>
 					<span class="say"> </span><br>
-					<span class="say">因为我太爱你了，所以我失去你了</span><br>
+					<span class="say">省略一万字  省略一万字  省略一万字</span><br>
 					<span class="say"> </span><br>
-					<span class="say">因为我太啰嗦了，所以你离开了我</span><br>
+					<span class="say">省略一万字  省略一万字  省略一万字</span><br>
 					<span class="say"> </span><br>
-					<span class="say">虽然你看不见我的告白，但是我还是要把这些心里话说</span><br>
+					<span class="say">省略一万字  省略一万字  省略一万字</span><br>
 					<span class="say"> </span><br>
-					<span class="say">虽然你看不见我的告白，但是我还是要把这些心里话说</span><br>
+					<span class="say">省略一万字  省略一万字  省略一万字</span><br>
 					<span class="say"> </span><br>
-					<span class="say">虽然你看不见我的告白，但是我还是要把这些心里话说</span><br>
+					<span class="say">省略一万字  省略一万字  省略一万字</span><br>
 					<span class="say"> </span><br>
-					<span class="say">虽然你看不见我的告白，但是我还是要把这些心里话说</span><br>
-					<span class="say"> </span><br>-->
-					
-					<span class="say">下午好，此处省略一万字。此处省略一万字。此处省略一万字。</span><br>
+					<span class="say">省略一万字  省略一万字  省略一万字</span><br>
 					<span class="say"> </span><br>
-					<span class="say">此处省略一万字。此处省略一万字。此处省略一万字。</span><br>
-					<span class="say"> </span><br>
-					<span class="say">此处省略一万字。此处省略一万字。此处省略一万字。</span><br>
-					<span class="say"> </span><br>
-					<span class="say">此处省略一万字。此处省略一万字。此处省略一万字。</span><br>
-					<span class="say"> </span><br>
-					<span class="say">此处省略一万字。此处省略一万字。此处省略一万字。</span><br>
-					<span class="say"> </span><br>
-					<span class="say">此处省略一万字。此处省略一万字。此处省略一万字。</span><br>
-					<span class="say"> </span><br>
-					<span class="say">此处省略一万字。此处省略一万字。此处省略一万字。</span><br>
-					<span class="say"> </span><br>
-					<span class="say">此处省略一万字。此处省略一万字。此处省略一万字。</span><br>
-					<span class="say"> </span><br>
-					<span class="say">此处省略一万字。此处省略一万字。此处省略一万字。</span><br>
-					<span class="say"> </span><br>
-					<span class="say"> -- 爱你的午夜阳光--</span>
+					<span class="say"> -- 一个迷人的帮磊--</span>
 				</div>
 			</div>
 			<div id="clock-box">
 <!-- 				<span><font color="#666666">亲爱的，我们相识已经是</font></span> -->
-				<span><font color="#666666">这一个时间</font></span>
+				<span><font color="#666666">这是一个浪漫的时间</font></span>
 				<div id="clock"></div>
 			</div>
 			<canvas id="canvas" width="1100" height="680"></canvas>
